[package]
name = "solana-rfq-aggregator"
version = "0.1.0"
description = "RFQ Aggregator Service for Solana RWA Trading"
edition = "2021"
license = "MIT"
authors = ["Solana RFQ Team"]

# Independent workspace to avoid dependency conflicts with Solana program crates
[workspace]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Solana pubkey (lightweight, no conflicting dependencies)
solana-pubkey = "2.2"
bs58 = "0.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenvy = "0.15"

# Ed25519 signing compatible with Solana's on-chain verification
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }

# Random number generation for secure keypair generation
rand_core = { version = "0.6", features = ["std"] }

# OpenAPI / Swagger documentation
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

[dev-dependencies]
tokio-test = "0.4"
